// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DevTools component hides settings when false 1`] = `
<styled.div
  className="pad-1 dls-accent-white-01-bg"
>
  <styled.div
    className="display-none"
  >
    <Connect(Settings) />
  </styled.div>
  <Connect(ScenariosDisplay)
    className=""
  />
  <styled.div
    className="pad-1-t flex flex-align-center flex-justify-between"
  >
    <styled.img
      src={null}
    />
    <button
      className="btn-icon btn-inline btn-tertiary dls-icon-setting"
      title="Show settings"
      type="button"
    />
  </styled.div>
</styled.div>
`;

exports[`DevTools component renders selector when true 1`] = `
<styled.div
  className="pad-1 dls-accent-white-01-bg"
>
  <styled.div
    className=""
  >
    <Connect(Settings) />
  </styled.div>
  <Connect(ScenariosDisplay)
    className="display-none"
  />
  <styled.div
    className="pad-1-t flex flex-align-center flex-justify-between"
  >
    <styled.img
      src={null}
    />
    <button
      className="btn-icon btn-inline btn-primary dls-icon-setting"
      title="Hide settings"
      type="button"
    />
  </styled.div>
</styled.div>
`;
